# yolov5_ros_wmeters

./: README.md  yolov5.yml
yolov5_ros/yolov5_ros/launch/: yolo_v5.launch  yolo_v5_digits.launch  yolo_v5_meters.launch  yolo_v5_uniform.launch
yolov5_ros/yolov5_ros/scripts/: calculate_gauge.py  yolo_v5.py  yolo_v5_digits.py  yolo_v5_meters.py  yolo_v5_uniform.py
yolov5_ros/yolov5_ros/yolov5/utils/: plots.py
yolov5_ros/yolov5_ros_msgs/: CMakeLists.txt
yolov5_ros/yolov5_ros_msgs/srv/: counter_response_crop.srv  gauge_response_crop.srv  meter_response.srv  meter_response_crop.srv  ssdisplay_response_crop.srv
